<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/nameshift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textColor="#3C3C3C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/batteryLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Battery Level:" />

        <TextView
            android:id="@+id/siteId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:text="Site ID: None"
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="italic" />
        <!--  <TextView android:id="@+id/shiftB" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#3C3C3C"
                  android:textSize="16sp"
                  android:textStyle="bold" android:layout_gravity="center_horizontal"
                  android:text=""/>
        <TextView android:id="@+id/shiftE" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#3C3C3C"
                  android:textSize="16sp"
                  android:textStyle="bold" android:layout_gravity="center_horizontal"
                  android:text=""/> -->

        <!-- <TextView android:id="@+id/lat" android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="#000000"
                   android:layout_margin="10dp"
                   android:textSize="14sp"
                   android:textStyle="italic"
                   android:text="Retriving GPS location...."/> -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:stretchColumns="*">

            <TableRow
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/lat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="Retriving GPS location...."
                        android:textColor="#000000"
                        android:textSize="13sp"
                        android:textStyle="italic" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/button_logout"
                        android:layout_width="95dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"
                        android:src="@drawable/logout_selector" />

                </RelativeLayout>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:stretchColumns="*">

            <TableRow android:paddingBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/smsbut"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/sms"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/smsbut"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="25dp"
                        android:text="@string/sms"
                        android:textColor="#000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/poi"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/create_poi"
                        android:orientation="vertical"
                        android:scaleType="fitXY"
                        android:text="@string/createpoi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/poi"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:text="@string/createpoi"
                        android:textColor="#000000" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/scanqr"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/scan"
                        android:orientation="horizontal"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/scanqr"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:text="@string/scan"
                        android:textColor="#000000" />
                </RelativeLayout>
            </TableRow>


            <TableRow android:paddingBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/sendreport"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:layout_weight="1"
                        android:background="@drawable/sendreport"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sendreport"
                        android:layout_marginLeft="10dp"
                        android:text="@string/sendrpt"
                        android:textColor="#000000"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/standorder"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:layout_weight="1"
                        android:background="@drawable/standingorder"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/standorder"
                        android:layout_marginLeft="0dp"
                        android:text="@string/standord"
                        android:textColor="#000000"></TextView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <AnalogClock
                        android:id="@+id/analogClock1"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:scaleType="fitXY" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>

        <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:layout_marginTop="10dp"
                 android:orientation="horizontal" android:layout_gravity="center_horizontal">

               <ImageButton
                 android:id="@+id/button_logout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:src="@drawable/logout_selector"
                 android:layout_gravity="center_horizontal"
                 />
        </LinearLayout>  -->

        <SlidingDrawer
            android:id="@+id/slidingDrawer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:content="@+id/contentLayout"
            android:handle="@+id/drawerHandle">

            <ImageView
                android:id="@+id/drawerHandle"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:src="@drawable/help"></ImageView>

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/e911"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/e911" />
            </LinearLayout>
        </SlidingDrawer>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgExit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:src="@drawable/more"/>

</RelativeLayout>